v147
(xx/03/17)

Changes / Improvements / Optimizations:
DietPi-Config | Audio > Sound Card: Added support for Soekris DAM1021 DAC: https://github.com/Fourdee/DietPi/issues/808
DietPi-Process_Tool | Blynk Server: now supported.
DietPi-Software | Aria2: Download manager with slick web UI interface, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6177#p6177
DietPi-Software | YaCy: Decentralized open source search engine, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6202#p6202
DietPi-Software | Blynk Server: config file added to the diepi user data folder, thanks to @joaofl: https://github.com/Fourdee/DietPi/pull/810
DietPi-Software | ShairPort-Sync: Updated to 3.0.2. SOXR interpolation is now enabled by default (should improve sound quality): https://github.com/Fourdee/DietPi/issues/819

Bug fixes:

-----------------------------------------------------------------------------------------------------------

v146
(14/03/17)

New Device:
RPi Zero W | Now fully supported (including onboard WiFi/BT): https://github.com/Fourdee/DietPi/issues/787

Changes / Improvements / Optimizations:
General | Wlan: 'disable power save' on boot, is now a service, installed when WiFi is enabled in 'dietpi-config' or via 'dietpi-set_hardware'.
General | DietPi RPi Kernel: Updated to latest.
DietPi-Drive_Manager | Added support for F2FS filesystem: https://github.com/Fourdee/DietPi/issues/802
DietPi-Drive_Manager | Transfer RootFS now allows for selection of filesystem types on target partition (eg: f2fs), RPi only: https://github.com/Fourdee/DietPi/issues/802
DietPi-Software | If NTPD is used (default on DietPi) for time sync, and, NTPD fails to sync, DietPi-Software will now exit, to prevent further issues with incorrect time during software installations: https://github.com/Fourdee/DietPi/issues/786
DietPi-Software | Syncthing-inotify: Installation updated to 0.8.5 (thanks John!)

Bug fixes: