@@ -94,7 +94,7 @@ rm /etc/apt/sources.list.d/deb-multimedia.list
 #Remove following Jessie
 apt-get clean
 apt-get update
-apt-get purge -y libboost-iostreams* sgml-base xml-core usb-modeswitch* libpng* cpp-* cpp ntpdate bluez bluetooth rsync dialog dhcpcd5 libsqlite* libxapian22 lua5.1 netcat-* make makedev ncdu plymouth openresolv shared-mime-in* tcpd strace tasksel* wireless-* xdg-user-dirs triggerhappy python* v4l-utils traceroute xz-utils ucf xauth zlib1g-dev xml-core aptitude* avahi-daemon rsyslog logrotate man-db manpages vim vim-common vim-runtime vim-tiny mc mc-data
+apt-get purge -y ppp libboost-iostreams* sgml-base xml-core usb-modeswitch* libpng* cpp-* cpp ntpdate bluez bluetooth rsync dialog dhcpcd5 libsqlite* libxapian22 lua5.1 netcat-* make makedev ncdu plymouth openresolv shared-mime-in* tcpd strace tasksel* wireless-* xdg-user-dirs triggerhappy python* v4l-utils traceroute xz-utils ucf xauth zlib1g-dev xml-core aptitude* avahi-daemon rsyslog logrotate man-db manpages vim vim-common vim-runtime vim-tiny mc mc-data
 
 #+Desktop images (Mostly desktop packages, but apply to non-desktop images also):
 apt-get purge -y libpod-* libpeas-* isc-dhcp-server gnome-* fonts-dejavu* eject dnsmasq* dns-root-data colord-data libturbojpeg1 libjasper* libjson* libwbclient* libwayland* golang-* libavahi* libtext* libweb* libpcsclite1 libxau6* libvpx1 libxc* dictionaries-* libgtk* miscfiles minicom lrzsz lxmenu-* x11-* zenity* yelp-*
@@ -124,7 +124,7 @@ apt-get install -y apt-transport-https ethtool p7zip-full hfsplus iw debconf-uti
 apt-get install rfkill
 
 #??? bluetooth if onboard device / RPI
-apt-get install -y bluetooth
+apt-get install -y bluetooth bluez-firmware
 
 #??? RPi - bluetooth/firmware for RPi 3 (ALL)
 apt-get install -y pi-bluetooth
@@ -474,7 +474,7 @@ systemctl disable getty@tty[2-6].service
 #systemctl disable serial-getty@ttyS0.service
 
 #NTPd - remove systemd's version
-systemctl disable systemd-timesync
+systemctl disable systemd-timesyncd
 
 
 
