@@ -3641,6 +3641,10 @@ _EOF_
 					whiptail_menu_array+=("allo-cheapo-analogue" "Allo Cheapo (3.5mm / RCA output)")
 					whiptail_menu_array+=("allo-cheapo-optical" "Allo Cheapo (Optical output)")
 
+				# - Asus tb
+				elif (( $HW_MODEL == 100 )); then
+
+					whiptail_menu_array+=("asus-tb-analogue" "3.5mm analogue")
 				fi
 
 				# - Global usb-dac, prefer at bottom of list
