@@ -56,7 +56,7 @@
 	#Array to store possible locations for temp read.
 	aFP_TEMPERATURE=(
 
-		#'/sys/class/thermal/thermal_zone1/temp' #sparky, will break other SBC temp readouts as most have 2 zones, needs a special case
+		#'/sys/class/thermal/thermal_zone1/temp' #sparky/Asus, will break other SBC temp readouts as most have 2 zones, needs a special case
 		'/sys/class/thermal/thermal_zone0/temp'
 		'/sys/devices/platform/sunxi-i2c.0/i2c-0/0-0034/temp1_input'
 		'/sys/class/hwmon/hwmon0/device/temp_label'
@@ -72,8 +72,8 @@
 
 				CPU_TEMP_CURRENT=$(cat "${aFP_TEMPERATURE[$i]}")
 
-				#Sparky, special case:
-				if (( $HW_MODEL == 70 )); then
+				#Sparky/asus, special case:
+				if (( $HW_MODEL == 70 || $HW_MODEL == 100 )); then
 
 					CPU_TEMP_CURRENT=$(cat /sys/class/thermal/thermal_zone1/temp)
 
