@@ -16,6 +16,7 @@
 	#	MAX_HW_ARCH=21		#This needs to match highest HW_ARCH value in dietpi-obtain_hw_model
 	#
 	# - Line1 -
+	# HW_MODEL 100 Asus Tinker Board
 	# HW_MODEL 90 A20-OLinuXino-MICRO
 	# HW_MODEL 80 Cubieboard 3
 	# HW_MODEL 70 Sparky SBC
@@ -101,8 +102,13 @@
 		HW_MODEL=$(sed -n 1p "$FP_HW_MODEL_INDENTIFIER")
 
 
+		#Asus Tinker Board
+		if (( $HW_MODEL == 100 )); then
+
+			HW_MODEL_DESCRIPTION='Asus Tinker Board'
+
 		#A20-OLinuXino-MICRO
-		if (( $HW_MODEL == 90 )); then
+		elif (( $HW_MODEL == 90 )); then
 
 			HW_MODEL_DESCRIPTION='A20-OLinuXino-MICRO'
 			IMAGE_ADDITIONAL_CREDITS='ARMbian'
