@@ -263,7 +263,7 @@ _EOF_
 	aSOFTWARE_REQUIRES_NODEJS=0
 
 	# - Available for
-	MAX_HW_MODEL=90		#This needs to match highest HW_MODEL value in dietpi-obtain_hw_model
+	MAX_HW_MODEL=100	#This needs to match highest HW_MODEL value in dietpi-obtain_hw_model
 	MAX_HW_ARCH=21		#This needs to match highest HW_ARCH value in dietpi-obtain_hw_model
 	#	2D array (well, bash style)
 	declare -A aSOFTWARE_AVAIL_HW_MODEL
@@ -2540,7 +2540,6 @@ _EOF_
 		wget http://dietpi.com/downloads/conf/desktop/dietpi-software.desktop -O /usr/share/applications/dietpi-software.desktop
 		wget http://dietpi.com/downloads/conf/desktop/dietpi-update.desktop -O /usr/share/applications/dietpi-update.desktop
 		wget http://dietpi.com/downloads/conf/desktop/dietpi-config.desktop -O /usr/share/applications/dietpi-config.desktop
-		wget http://dietpi.com/downloads/conf/desktop/dietpi-uninstall.desktop -O /usr/share/applications/dietpi-uninstall.desktop
 		wget http://dietpi.com/downloads/conf/desktop/dietpi-backup.desktop -O /usr/share/applications/dietpi-backup.desktop
 		wget http://dietpi.com/downloads/conf/desktop/dietpi-sync.desktop -O /usr/share/applications/dietpi-sync.desktop
 		wget http://dietpi.com/downloads/conf/desktop/dietpi-bugreport.desktop -O /usr/share/applications/dietpi-bugreport.desktop
@@ -5873,6 +5872,18 @@ _EOF_
 					Error_NoConnection_NoInstall
 
 				fi
+
+			#Asus TB
+			# elif (( $HW_MODEL == 100 )); then
+
+				# cat << _EOF_ > /etc/X11/xorg.conf
+# Section "Device"
+    # Identifier  "Rockchip Graphics"
+    # Driver      "modesetting"
+    # Option      "AccelMethod"    "glamor"
+    # Option      "DRI"            "2"
+# EndSection
+# _EOF_
 
 			fi
 
@@ -10528,17 +10539,18 @@ _EOF_
 		apt-get autoremove --purge -y
 
 		#Check if we need to clear DietPi choices
-		dpkg -l > /tmp/.dietpi-uninstall_dpkg
-		if (( $(cat /tmp/.dietpi-uninstall_dpkg | grep -ci -m1 'openssh-server') == 0 &&
-			$(cat /tmp/.dietpi-uninstall_dpkg | grep -ci -m1 'dropbear') == 0 )); then
+		local fp_temp='/tmp/.dietpi-uninstall_dpkg'
+		dpkg -l | awk '{print $2}' > "$fp_temp"
+		if (( $(cat "$fp_temp" | grep -ci -m1 '^openssh-server') == 0 &&
+			$(cat "$fp_temp" | grep -ci -m1 '^dropbear') == 0 )); then
 
 			INDEX_SSHSERVER_CURRENT=0
 			INDEX_SSHSERVER_TARGET=0
 
 		fi
 
-		if (( $(cat /tmp/.dietpi-uninstall_dpkg | grep -ci -m1 ' samba ') == 0 &&
-			$(cat /tmp/.dietpi-uninstall_dpkg | grep -ci -m1 'proftpd-basic') == 0 )); then
+		if (( $(cat "$fp_temp" | grep -ci -m1 '^samba$') == 0 &&
+			$(cat "$fp_temp" | grep -ci -m1 '^proftpd-basic') == 0 )); then
 
 			INDEX_FILESERVER_CURRENT=0
 			INDEX_FILESERVER_TARGET=0
@@ -10546,15 +10558,15 @@ _EOF_
 		fi
 
 		if (( $(cat /etc/fstab | grep -ci -m1 '#/var/log') == 1 &&
-			$(cat /tmp/.dietpi-uninstall_dpkg | grep -ci -m1 'rsyslog') == 0 &&
-			$(cat /tmp/.dietpi-uninstall_dpkg | grep -ci -m1 'logrotate') == 0 )); then
+			$(cat "$fp_temp" | grep -ci -m1 '^rsyslog') == 0 &&
+			$(cat "$fp_temp" | grep -ci -m1 '^logrotate') == 0 )); then
 
 			INDEX_LOGGING_CURRENT=0
 			INDEX_LOGGING_TARGET=0
 
 		fi
 
-		rm /tmp/.dietpi-uninstall_dpkg
+		rm "$fp_temp"
 
 		systemctl daemon-reload
 
@@ -11858,7 +11870,7 @@ _EOF_
 
 							# - inform user
 							WHIP_TITLE="Error: Incompatible Webserver Preference"
-							WHIP_QUESTION="Unable to change your webserver preference to $OPTION.\n\nThis is due to an existing and incompatible webserver installation on your system ($info_currently_installed_webserver). Please remove all webserver based software (using dietpi-uninstall), before trying again."
+							WHIP_QUESTION="Unable to change your webserver preference to $OPTION.\n\nThis is due to an existing and incompatible webserver installation on your system ($info_currently_installed_webserver). Please remove all webserver based software (using dietpi-software > uninstall), before trying again."
 							whiptail --title "$WHIP_TITLE" --msgbox "$WHIP_QUESTION" --backtitle "$WHIP_BACKTITLE" 11 75
 
 
