@@ -1243,10 +1243,10 @@ _EOF_
 
 			aWIFI_MODULES+=("8189es")
 
-		# + Pine A64
-		elif (( $HW_MODEL >= 40 && $HW_MODEL < 50 )); then
+		# + Pine A64 / Asus tinker board (onboard)
+		elif (( ( $HW_MODEL >= 40 && $HW_MODEL < 50 ) || $HW_MODEL == 100 )); then
 
-			aWIFI_MODULES+=("8723bs") #addon WiFi/BT board.
+			aWIFI_MODULES+=("8723bs")
 
 		# + NanoPi NEO Air
 		elif (( $HW_MODEL == 64 )); then
@@ -1586,6 +1586,11 @@ _EOF_
 
 			Soundcard_Reset_SparkySBC
 
+		#ASUS
+		elif (( $HW_MODEL == 100 )); then
+
+			Soundcard_Reset_Asus
+
 		fi
 
 	}
@@ -1646,6 +1651,13 @@ _EOF_
 		#set hdmi
 		amixer set -c 0 'Audio lineout' mute &> /dev/null
 
+		SOUNDCARD_TARGET_CARD=1
+
+	}
+
+	Soundcard_Reset_Asus(){
+
+		#set hdmi
 		SOUNDCARD_TARGET_CARD=1
 
 	}
@@ -1948,6 +1960,14 @@ _EOF_
 			s5pxx18-hdmi)
 
 				SOUNDCARD_TARGET_CARD=1
+
+			;;
+
+			#Asus tinker -------------------------------------------------------------------------------
+			asus-tb-analogue)
+
+				SOUNDCARD_TARGET_CARD=0
+				SOUNDCARD_TARGET_DEVICE=2
 
 			;;
 
