@@ -1,15 +1,19 @@
 v147
 (xx/03/17)
 
+New Image:
+Asus Tinker Board |
+
 Changes / Improvements / Optimizations:
 DietPi-Config | Audio > Sound Card: Added support for Soekris DAM1021 DAC: https://github.com/Fourdee/DietPi/issues/808
 DietPi-Process_Tool | Blynk Server: now supported.
 DietPi-Software | Aria2: Download manager with slick web UI interface, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6177#p6177
 DietPi-Software | YaCy: Decentralized open source search engine, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6202#p6202
 DietPi-Software | Blynk Server: config file added to the diepi user data folder, thanks to @joaofl: https://github.com/Fourdee/DietPi/pull/810
-DietPi-Software | ShairPort-Sync: Updated to 3.0.2. SOXR interpolation is now enabled by default (should improve sound quality): https://github.com/Fourdee/DietPi/issues/819
+DietPi-Software | ShairPort-Sync: Updated to 3.0.2. SOXR interpolation is now enabled by default (will improve sound quality): https://github.com/Fourdee/DietPi/issues/819
 
 Bug fixes:
+DietPi-Software | Removed references for dietpi-uninstall. Many thanks to Pilovali!
 
 -----------------------------------------------------------------------------------------------------------
 
